Week 11 updates